--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
 
     </head>
     <body>
-        <h1>Baba Sariffodeen</h1>
+        <header>
+            <a href="index.html">
+                <h1>Baba Sariffodeen</h1>
+                <h2>Designer</h2>
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Portfolio</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section>
+            <p>Gallery will go here.</p>
+        </section>
+        <footer>
+            <p>&copy; 2018 Baba Sariffodeen.</p>
+        </footer>
                 
     </body>
 </html>
