--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Baba Sariffodeen | Designer</title>
-        <!-- This is added as the name of the page to search engine results -->
-
+        <link rel="stylesheet" href="css/normalize.css"> 
+        <link rel="stylesheet" href="css/style.css">
+        <!-- Normalise used to remove browser inconsistencies and reset styles -->
     </head>
     <body>
+        <div id="wrapper">
         <header>
-            <a href="index.html">
+            <a href="index.html" id="logo">
                 <h1>Baba Sariffodeen</h1>
                 <h2>Designer</h2>
             </a>
@@ -20,13 +22,62 @@
                 </ul>
             </nav>
         </header>
+
         <section>
-            <p>Gallery will go here.</p>
+            <ul>
+                <!-- Project works best with 1024x768 -->
+                <li>
+                    <a href="img/numbers-01.jpg">
+                        <img src="img/numbers-01.jpg" alt="">
+                        <!-- Need to apply visual styling to re-size the image -->
+                        <p>Experimentation with color and texture</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/numbers-02.jpg">
+                        <img src="img/numbers-02.jpg" alt="">
+                        <!-- Need to apply visual styling to re-size the image -->
+                        <p>Experimentation with color and texture</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/numbers-06.jpg">
+                        <img src="img/numbers-06.jpg" alt="">
+                        <!-- Need to apply visual styling to re-size the image -->
+                        <p>Experimentation with color and texture</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/numbers-09.jpg">
+                        <img src="img/numbers-09.jpg" alt="">
+                        <!-- Need to apply visual styling to re-size the image -->
+                        <p>Experimentation with color and texture</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="img/numbers-12.jpg">
+                        <img src="img/numbers-12.jpg" alt="">
+                        <!-- Need to apply visual styling to re-size the image -->
+                        <p>Experimentation with color and texture</p>
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li><img src="img/numbers-01.jpg" alt=""></li>
+                <li><img src="img/numbers-02.jpg" alt=""></li>
+                <li><img src="img/numbers-06.jpg" alt=""></li>
+            </ul>
         </section>
         <footer>
+            <a href="">
+                    <img src="img/twitter-wrap.png" alt="Twitter logo">
+            </a>
+            <a href="">
+                    <img src="img/facebook-wrap.png" alt="Facebook logo">
+            </a>
             <p>&copy; 2018 Baba Sariffodeen.</p>
         </footer>
-                
+        </div>
     </body>
 </html>
 
