--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Baba Sariffodeen | Designer</title>
         <link rel="stylesheet" href="css/normalize.css"> 
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <!-- Normalise used to remove browser inconsistencies and reset styles -->
     </head>
@@ -16,7 +17,7 @@
             </a>
             <nav>
                 <ul>
-                    <li><a href="index.html">Portfolio</a></li>
+                    <li><a href="index.html" class="selected">Portfolio</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -29,7 +30,6 @@
                 <li>
                     <a href="img/numbers-01.jpg">
                         <img src="img/numbers-01.jpg" alt="">
-                        <!-- Need to apply visual styling to re-size the image -->
                         <p>Experimentation with color and texture</p>
                     </a>
                 </li>
@@ -67,7 +67,6 @@
                 <li><img src="img/numbers-02.jpg" alt=""></li>
                 <li><img src="img/numbers-06.jpg" alt=""></li>
             </ul>
-        </section>
         <footer>
             <a href="">
                     <img src="img/twitter-wrap.png" alt="Twitter logo">
