--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </header>
 
         <section>
-            <ul>
+            <ul id="gallery">
                 <!-- Project works best with 1024x768 -->
                 <li>
                     <a href="img/numbers-01.jpg">
@@ -61,11 +61,6 @@
                         <p>Experimentation with color and texture</p>
                     </a>
                 </li>
-            </ul>
-            <ul>
-                <li><img src="img/numbers-01.jpg" alt=""></li>
-                <li><img src="img/numbers-02.jpg" alt=""></li>
-                <li><img src="img/numbers-06.jpg" alt=""></li>
             </ul>
         <footer>
             <a href="">
